crates/biome_html_formatter/tests/specs/prettier/angular/start-tag-comments/start-tag-comments.html.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: angular/start-tag-comments/start-tag-comments.html
---

# Input

```html
<div
  // comment 0
  /* comment 1 */
  attr1="value1"
  /*
     comment 2
     spanning multiple lines
  */
  attr2="value2"
></div>

<div // line comment
></div>
<div // line comment
disabled
></div>

<div /* block comment */
></div>

<div /* block comment */
disabled
></div>

<div /* block comment */></div>
<div /* block comment */ disabled></div>

<div
/*
line 1
line 2
*/
></div>

<div><div>
<div /*
should not indent
*/></div>
</div></div>

<div><div>
<div /**
* TODO: This comment should aligned
*/></div>
</div></div>

```


# Errors
```
start-tag-comments.html:2:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `>` but instead found `/`
  
    1 │ <div
  > 2 │   // comment 0
      │    ^
    3 │   /* comment 1 */
    4 │   attr1="value1"
  
  i Remove /
  

```

# Error
```text
format: Can't format code because it contains syntax errors
```
